# devin-mcp

./: .pre-commit-config.yaml  CLAUDE.md  README.md  main.py  pyproject.toml
tests/: conftest.py  test_main.py
