[project]
name = "devin-mcp"
version = "0.1.0"
description = "MCP server for delegating tasks to Devin AI"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "fastmcp>=2.14.2",
    "httpx>=0.28.0",
]

[dependency-groups]
dev = [
    "prek>=0.2.0",
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "respx>=0.22.0",
    "ruff>=0.14.10",
    "ty>=0.0.8",
]

[tool.ruff]
target-version = "py314"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.ty.environment]
python = ".venv"
